syntax = "proto3";
package service;

option go_package = "github.com/callmeahab/pharma-search/gen;pb";

import "google/protobuf/struct.proto";

service PharmaAPI {
  rpc Health(HealthRequest) returns (HealthResponse) { }
  rpc Autocomplete(AutocompleteRequest) returns (AutocompleteResponse) { }
  rpc Search(SearchRequest) returns (GenericJsonResponse) { }
  rpc SearchGroups(SearchGroupsRequest) returns (GenericJsonResponse) { }
  rpc SearchGroupsStream(SearchGroupsRequest) returns (stream ProductGroupChunk) { }
  rpc GetFacets(FacetsRequest) returns (GenericJsonResponse) { }
  rpc GetFeatured(FeaturedRequest) returns (GenericJsonResponse) { }
  rpc PriceComparison(PriceComparisonRequest) returns (GenericJsonResponse) { }
  rpc Contact(ContactRequest) returns (GenericJsonResponse) { }
  rpc ProcessProducts(ProcessRequest) returns (GenericJsonResponse) { }
  rpc ReprocessAll(ReprocessAllRequest) returns (GenericJsonResponse) { }
  rpc RebuildIndex(RebuildIndexRequest) returns (GenericJsonResponse) { }
  rpc ProcessingAnalysis(ProcessingAnalysisRequest) returns (GenericJsonResponse) { }
}

message GenericJsonResponse {
  google.protobuf.Struct data = 1;
}

message HealthRequest {}
message HealthResponse { string status = 1; }

message AutocompleteRequest { string q = 1; int32 limit = 2; }
message AutocompleteSuggestion { string id = 1; string title = 2; double price = 3; string vendor_name = 4; }
message AutocompleteResponse { repeated AutocompleteSuggestion suggestions = 1; string query = 2; int32 limit = 3; }

message SearchRequest {
  string q = 1;
  int32 limit = 2;
  int32 offset = 3;
  double min_price = 4;
  double max_price = 5;
  repeated string brand_names = 6;
  repeated string categories = 7;
  repeated string forms = 8;
  bool in_stock_only = 9;
}

message SearchGroupsRequest {
  string q = 1;
  int32 limit = 2;
  int32 offset = 3;
}
message FacetsRequest {}
message PriceComparisonRequest { string q = 1; }
message ContactRequest { string name = 1; string email = 2; string message = 3; }
message ProcessRequest { int32 batch_size = 1; }
message ReprocessAllRequest {}
message RebuildIndexRequest {}
message ProcessingAnalysisRequest {}
message FeaturedRequest { int32 limit = 1; }

// Streaming search response messages
message ProductGroupChunk {
  repeated ProductGroup groups = 1;
  SearchMetadata metadata = 2;
  bool is_complete = 3;
}

message ProductGroup {
  string id = 1;
  string normalized_name = 2;
  repeated Product products = 3;
  PriceRange price_range = 4;
  int32 vendor_count = 5;
  int32 product_count = 6;
  double dosage_value = 7;
  string dosage_unit = 8;
}

message Product {
  string id = 1;
  string title = 2;
  double price = 3;
  string vendor_id = 4;
  string vendor_name = 5;
  string link = 6;
  string thumbnail = 7;
  string brand_name = 8;
  string group_key = 9;
  double dosage_value = 10;
  string dosage_unit = 11;
  string form = 12;
  int32 quantity = 13;
  int32 rank = 14;
}

message PriceRange {
  double min = 1;
  double max = 2;
  double avg = 3;
}

message SearchMetadata {
  int32 total_products = 1;
  int32 total_groups = 2;
  string search_type_used = 3;
  map<string, FacetValues> facets = 4;
}

message FacetValues {
  map<string, int32> values = 1;
}
